# ChangeLog for media-libs/mesa
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/mesa/ChangeLog,v 1.29 2005/08/16 03:36:14 spyderous Exp $

  16 Aug 2005; Donnie Berkholz <spyderous@gentoo.org>;
  mesa-6.3.1.1-r3.ebuild:
  libOSMesa isn't building anymore, so stop symlinking and installing libtool
  archives.

*mesa-6.3.1.1-r3 (16 Aug 2005)

  16 Aug 2005; Donnie Berkholz <spyderous@gentoo.org>;
  +mesa-6.3.1.1-r3.ebuild:
  Fix direct rendering on r200 by adding USING_EGL=0. Turning off EGL takes a
  lot of work.

  15 Aug 2005; Herbie Hopkins <herbs@gentoo.org> mesa-6.3.1.1-r2.ebuild:
  Fix multilib issue and add ~amd64 keyword.

  15 Aug 2005; Donnie Berkholz <spyderous@gentoo.org>;
  mesa-6.3.1.1-r2.ebuild:
  Install libGL.la to /usr/lib/opengl/xorg-x11/lib, where libGL.so really is,
  instead of /usr/lib. This only seems necessary because of the LDPATH hack in
  opengl-update.

*mesa-6.3.1.1-r2 (14 Aug 2005)

  14 Aug 2005; Donnie Berkholz <spyderous@gentoo.org>;
  +files/change-default-dri-driver-dir.patch,
  +files/dont-install-gles-headers.patch, +mesa-6.3.1.1-r2.ebuild:
  Stop building EGL things, because they aren't ready upstream. Also the EGL
  demos rely on glut, which creates a circular dependency. Change the default
  DRI driver directory to the one we actually use. This should be enough to
  get direct rendering working.

*mesa-6.3.1.1-r1 (12 Aug 2005)

  12 Aug 2005; Donnie Berkholz <spyderous@gentoo.org>;
  +mesa-6.3.1.1-r1.ebuild:
  Bump to update to CVS head as of yesterday.

  12 Aug 2005; Donnie Berkholz <spyderous@gentoo.org>; mesa-6.3.1.1.ebuild:
  Turn parallel build back off. Can get problems with depend files not existing.

  12 Aug 2005; Donnie Berkholz <spyderous@gentoo.org>; mesa-6.3.1.1.ebuild:
  Test out parallel make. fmccor says it works.

  12 Aug 2005; Ferris McCormick <fmccor@gentoo.org> mesa-6.3.1.1.ebuild: