@@ -1,8 +1,8 @@
-MD5 6ee3ffff9e3d08c355ead0502b268b79 ChangeLog 6273
+MD5 8d0c736e0080f774f21bf6846977cc57 ChangeLog 6406
 MD5 7f0a62b636986a7f0c00bc3b2b15423b mesa-6.3.1.1.ebuild 4836
 MD5 2bddb4082f270ed7e70da09ac76d475e mesa-6.3.1.1-r1.ebuild 5102
 MD5 83e57c2a9ce9ca4b95028165cb750b45 mesa-6.3.1.1-r2.ebuild 5704
-MD5 1f8b19cd893d45bdb8b5f6c408e71ead mesa-6.3.1.1-r3.ebuild 5830
+MD5 c80dea58a985b63a1f0f9ec9f95832f8 mesa-6.3.1.1-r3.ebuild 5863
 MD5 327ad9473f146d09e0d0bd9198bb6a99 files/digest-mesa-6.3.1.1 129
 MD5 dba6d6acff3459c88499ffb1aa802d63 files/fix-include-locations.patch 3046
 MD5 14a7882e4e2dc41b7ef845dc11bd9a0c files/fix-xthreads-location.patch 1718
