@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/mesa
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/mesa/ChangeLog,v 1.29 2005/08/16 03:36:14 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/mesa/ChangeLog,v 1.30 2005/08/17 16:37:19 spyderous Exp $
+
+  17 Aug 2005; Donnie Berkholz <spyderous@gentoo.org>;
+  mesa-6.3.1.1-r3.ebuild:
+  Add x11-proto/printproto to DEPEND on USE=motif.
 
   16 Aug 2005; Donnie Berkholz <spyderous@gentoo.org>;
   mesa-6.3.1.1-r3.ebuild:
